# soccer-simulator

./: CMakeLists.txt  LICENSE.md  README.md
client/: README.md  cfg.py  client.py  compile_proto.sh  visualizer.py
config/: config.h
include/: robot.h  sslworld.h
include/physics/: pball.h  pbox.h  pcylinder.h  pfixedbox.h  pground.h  pobject.h  pray.h  pworld.h
src/: main.cpp  robot.cpp  sslworld.cpp
src/physics/: pball.cpp  pbox.cpp  pcylinder.cpp  pfixedbox.cpp  pground.cpp  pobject.cpp  pray.cpp  pworld.cpp
src/proto/: commands.proto  observation.proto
